# semgrep-joern-taint-demo

./: .gitignore  AGENTS.md  DECISIONS.md  PROGRESS.md  README.md  pyproject.toml
analysis/: LIMITATIONS.md  repo_map_compare.md
analysis/joern/: backward_from_sinks.sc  extract_chain_snippets.sc  extract_entrypoint_snippets.sc  find_entrypoints.sc  forward_from_entrypoints.sc  repo_map.sc  taint_confirm.sc
analysis/rules/: sinks-csharp.yml  sinks-java.yml  sinks-js.yml  sinks-python.yml
joern/: cpg_overview.sc  find_sinks.sc  investigate_sinks.sc  joern_map_semgrep.sc  sink_walkthrough.sc  trace_taint.sc
scripts/: chain_report.py  compare_repo_maps.py  llm_judge_entrypoints.py  llm_judge_sink_chains.py  map_semgrep_to_functions.py  repo_map.py  semgrep_to_sinks.py
src/bad_demo/: __init__.py  app.py  auth.py  config.py  crypto.py  db.py  deserialization.py  exec_utils.py  http_utils.py  ldap_utils.py  logging_utils.py  templates.py
src/bad_demo/templates/: index.html  search.html
targets/csharp-aspnet/: GROUND_TRUTH.md  ground_truth.json
targets/csharp-aspnet/Config/: AppConfig.cs
targets/csharp-aspnet/Controllers/: AdminController.cs  AuthController.cs  FilesController.cs  OrdersController.cs  ProfileController.cs  RenderController.cs  ToolsController.cs  UsersController.cs  XmlController.cs
targets/csharp-aspnet/Data/: UserRepository.cs
targets/java-spring/: GROUND_TRUTH.md  ground_truth.json
targets/js-ts-express/: GROUND_TRUTH.md  app.js  config.js  ground_truth.json
targets/python-flask/: GROUND_TRUTH.md  app.py  config.py  ground_truth.json
(+49 files in other folders)
