[project]
name = "bad-demo"
version = "0.1.0"
description = "Intentionally vulnerable Python demo for SAST testing and cross-file taint analysis"
requires-python = ">=3.10"
dependencies = [
    "flask==2.0.0",
    "werkzeug<2.1",
    "requests==2.25.0",
    "pyyaml==5.3",
    "pyjwt==1.7.1",
    "ldap3",
]

[project.scripts]
bad-demo = "bad_demo.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bad_demo"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
